--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 14.02.2022 08:33:36</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 14.02.2022 09:12:47</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,24 +7,24 @@
 <h5>Pondělí, 14. 02. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Vývar s uzeným a nudlemi</strong>
+<strong>Cizrnová</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Krůtí tandoori s rýží</strong>
+<strong>Svíčková na smetaně s houskovým knedlíkem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							135,-
+							137,-
 						</span>
 </p>
 <p>
-<strong>Skořicové lívance s borůvkami a tvarohem</strong>
+<strong>Míchaný salát s pečeným hermelínem a bagetkou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							115,-
+							135,-
 						</span>
 </p>
 <p>
@@ -163,7 +163,7 @@ drcenými rajčaty a chorizo klobásou 1a,9</td>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny jihocesky pstruh s krenovou jogurtovou omackou, pecene brambory, salatek 139</li><li>Spagety s kousky chobotnice a humra, susenymi rajcaty a restovanym porkem, parmezan {L} 175</li><li>Zauzene pecene seleci ribsy v barbecue marinade, jasminova ryze, salatek 139</li><li>Medailonky z kanci plece na zelenem pepri, pecene brambory s podzimni zeleninou, salatek 169</li><li>Bramborove gnocchi s rajcaty, maslovymi fazolemi, sazenym vejcem a mozzarellou, salatek ( L ) 139</li></ol>
+<ol><li>Peceny filet z atlanticke makrely se susenymi rajcaty a syrskymi zelenymi olivami, cervena cocka se smazenou cibulkou, salatek 139</li><li>Peceny filet z cerstve bile tresky se susenymi rajcaty a syrskymi zelenymi olivami, cervena cocka se smazenou cibulkou, salatek 169</li><li>Palive a vonave vindalu s veprovym masem, bramborami a garam masala, jasminova ryze, salatek 139</li><li>Bramborove gnocchi s trhanou pecenou danci pleci pecenou na cabernetu a korenove zelenine, zrala gouda, salatek {L} 169</li><li>Brokolicove placicky s quinoou a besanem, jogurtovy dip, birjany z basmati ryze, salatek 139</li></ol>
 </td>
 </tr>
 </table>
