--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 14.02.2022 18:48:52</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 15.02.2022 06:09:56</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
 <div class="containerPriceList">
 <span class="line"></span>
-<h5>Pondělí, 14. 02. 2022</h5>
+<h5>Úterý, 15. 02. 2022</h5>
 <span class="line"></span>
 <p>
 <strong>Cizrnová</strong>
@@ -50,44 +50,9 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Pondělí 14.2.2022</div>
+<div class="nadpis">Úterý 15.2.2022</div>
 <ul>
-<li class="poznamka">
-<div class="polozka">Drobenkový koláč s tvarohem a borůvkami</div>
-<div class="cena">39 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="poznamka">
-<div class="polozka">Kynuté buchty s tvarohem nebo povidlami</div>
-<div class="cena">25 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="polevka">
-<div class="polozka">300ml Batátový krém, bylinkový jogurt, pažitka samostatně  <em title="Mléko">7</em><em title="Celer">9</em><em title="Hořčice">10</em></div>
-<div class="cena">45 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="polevka">
-<div class="polozka">300ml Batátový krém, bylinkový jogurt, pažitka v menu <em title="Mléko">7</em><em title="Celer">9</em><em title="Hořčice">10</em></div>
-<div class="cena">35 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">1. </span>150g Grilovaná vepřová panenka, pepřová omáčka, šťouchaný brambor, pórek, zelný salát <em title="Mléko">7</em><em title="Oxid siřičitý a siřičitany">12</em></div>
-<div class="cena">155 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">2. </span>150g Kuřecí prso na paprice, máslová tarhoňa, zakysaná smetana <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
-<div class="cena">145 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">3. </span>350g Krémové bulgurové rizoto, restované houby, rukola, parmazán <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em></div>
-<div class="cena">145 Kč</div>
-<div class="clear"></div>
-</li>
-</ul>
+<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
 </div>
 </td>
 </tr>
@@ -98,16 +63,19 @@
 <td>
 <table class="table"><table class="table">
 <tbody>
-<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">37,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Česnekový krém s krutony </td><td class="menuPrice">39,-</td></tr></tbody>
+<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">37,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Zelná s paprikovou klobásou</td><td class="menuPrice">39,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Předkrm </h5><tr><td class="menuWeight">150g</td><td class="menuName">Gothajský salám z Maso Jičín s cibulí, octem a feferonkou, kváskový chléb</td><td class="menuPrice">49,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Restované plátky gothaje z Maso Jičín na dijonské hořčici s majonézou, kváskový chléb</td><td class="menuPrice">59,-</td></tr></tbody>
+<h5 class="border_box_title">Předkrm </h5><tr><td class="menuWeight">150g</td><td class="menuName">Gothajský salám z Maso Jičín s cibulí, octem a feferonkou, kváskový chléb</td><td class="menuPrice">49,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">Pečený anglický rostbíf z hovězí roštěné na pepřové redukci, grilované brambory s rozmarýnem, cibule, hořčice, volské oko</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hovězí svíčková na smetaně, kynuté houskové knedlíky, brusinky, šlehačka</td><td class="menuPrice">143,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pečené masové kuličky v rajské omáčce, těstoviny fusili</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Moravský vrabec, bramborové knedlíky, červené zelí </td><td class="menuPrice">139,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Drůbeží játra na grilu s červenou cibulí, smažené hranolky, česnekový dip</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 150g Do růžova pečená vepřová panenka, mozzarella s rajčaty s bazalkovým pestem, celerové pyré, vařené vejce, rukoila</td><td class="menuPrice">155,-</td></tr><tr><td class="menuWeight">Instapivo</td><td class="menuName">Pokud jsi stálý sledující naše instagramového profilu "senkyrna7", tak máš čepovaný Staropramen 11° 0,5L pouze za 26,-Kč neomezeně. Musíš si pouze o tuto cenu říct a prokázat sledování na telefonu obsluze. Platí i pro odnos piva s sebou.</td><td class="menuPrice">26,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Smažený řízek z kuřecích prsou obalený v cornflakes, bramborová kaše s máslem, citrón</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z vepřové pečeně na jemné pepřové omáčce, restované špecle</td><td class="menuPrice">139,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Těstovinový salát se zeleninou, česnekovým dresinkem, filírovaná kuřecí prsa, parmazán</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight">2 + 1</td><td class="menuName">Staropramen  EXTRA CHMELENÁ 12% - Dej si dva čepované ležáky a domů za věrnost dostaneš 0,5l plechovku, není množstevně omezeno, vypiješ " dvacet kousku "  a dostaneš 10 plechovek</td><td class="menuPrice">84,-</td></tr><tr><td class="menuWeight">1 + 1</td><td class="menuName">Svařené červené víno AKCE 1+1 zdarma (dej si najednou dva svařáky a jeden je zdarma)</td><td class="menuPrice">70,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">Každý den od 15:00 do 19:00. Pokud nás stále sleduješ na instagramu, můžeš využít každý den své slevy na kuřecí steak se šunkou a smažený sýr za 99,- (pro nesledující za 145,-Kč) Prosíme v případě vyzvání prokázání sledování na telefonu, děkujeme.</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Steak z kuřecích prsou se šunkou a sýrem, hranolky</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažený sýr 45%, vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">99,-</td></tr></tbody>
+<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight"></td><td class="menuName">Ve středu budou opět naše oblíbené koláče </td><td class="menuPrice">22,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Škubánky sypané mákem, moučkovým cukrem a polité rozpuštěným máslem</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight">TIP</td><td class="menuName">Dukátové buchtičky s vanilkovým šodo, šlehačkou a karamelem</td><td class="menuPrice">65,-</td></tr></tbody>
+<h5 class="border_box_title">Vážení hosté, dnes nepřijímáme platební karty. Děkujeme za pochopení</h5><tr><td class="menuWeight">TOP:</td><td class="menuName">Těstoviny linguine s bolonským ragú, strouhaný sýr</td><td class="menuPrice">119,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Koprová omáčka s hovězím masem a vařeným vejcem, kynuté houskové knedlíky</td><td class="menuPrice">139,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hovězí roštěná na houbách, dušená jasmínová rýže</td><td class="menuPrice">139,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Čočka na kyselo, uzená kýta na grilu, volské oko, kyselá okurka</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová strava:  150g Dorůžova pečená vepřová panenka, grilovaná zelenina, brokolicové pyré, vařené vejce</td><td class="menuPrice">153,-</td></tr><tr><td class="menuWeight">Instapivo</td><td class="menuName">Pokud jsi stálý sledující naše instagramového profilu "senkyrna7", tak máš čepovaný Staropramen 11° 0,5L pouze za 26,-Kč neomezeně. Musíš si pouze o tuto cenu říct a prokázat sledování na telefonu obsluze. Platí i pro odnos  s sebou.</td><td class="menuPrice">26,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Smažený květák, vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hovězí nudličky po sečuánsku s čerstvou zeleninou a chilli, smažené bramborové hranolky</td><td class="menuPrice">139,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pečená vepřová panenka v listovém těstě s listovým špenátem, bramborová kaše, grilovaná karotka</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Zeleninový salát s trhanými listy s majonézovým dresinkem, kuřecí stripsy, vařené vejce, parmazán</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight">1+1</td><td class="menuName">Svařené červené víno AKCE 1+1 zdarma (dej si najednou dva svařáky a jeden je zdarma)</td><td class="menuPrice">70,-</td></tr><tr><td class="menuWeight">2+1</td><td class="menuName">Staropramen  EXTRA CHMELENÁ 12% - Dej si dva čepované ležáky a domů za věrnost dostaneš 0,5l plechovku, není množstevně omezeno, vypiješ " dvacet kousku "  a dostaneš 10 plechovek</td><td class="menuPrice">84,-</td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">Každý den od 15:00 do 19:00. Pokud nás stále sleduješ na instagramu, můžeš využít každý den své slevy na kuřecí steak se šunkou a smažený sýr za 99,- (pro nesledující za 145,-Kč) Prosíme v případě vyzvání prokázání sledování na telefonu, děkujeme.</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">150g Steak z kuřecích prsou se šunkou a sýrem, hranolky</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">99,-</td></tr></tbody>
+</table><table class="table">
+<tbody>
+<h5 class="border_box_title">Dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Škubánky sypané mákem, moučkovým cukrem a polité rozpuštěným máslem</td><td class="menuPrice">55,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
 <h5 class="border_box_title">wi-fi heslo: www.senkyrna.cz</h5><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr></tbody></table></table>
@@ -151,6 +119,11 @@ drcenými rajčaty a chorizo klobásou 1a,9</td>
 </tr>
 </tbody>
 </table>
+</td>
+</tr>
+<tr>
+<td>
+<table class="dm"><tr><td class="amount"> </td><td class="title">Pikantní hovězí PHO s koriandrem a chilli s vaječnými nudlemi 1a,3,6,9</td><td class="pricem">39 Kč</td><tr><tr><td class="amount">200g</td><td class="title">Pečený vepřový bůček po thajsku s wasabi bramborovým pyré a restovanou hlívou ústřičnou 1a,6,7</td><td class="pricem">135 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Hovězí burger s ledovým salátem, anglickou slaninou, rajčetem, nakládanou okurkou, cibulí a bbq majonézou s hranolky 1a,3,7,10,11</td><td class="pricem">149 Kč</td><tr><tr><td class="amount">400g</td><td class="title">Zapečené francouzské brambory s uzenou krkovičkou a vejci se salátem z červené řepy 3,7</td><td class="pricem">129 Kč</td><tr></tr></tr></tr></tr></tr></tr></tr></tr></table>
 </td>
 </tr>
 </table>
